--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
   </head>
   <body>
     <div class="page">
-      <header>
+      <nav>
         <div class="image">
-          <img src="assets/logo.svg" alt="Logo treine.me" />
+          <a href="$">
+            <img src="assets/logo.svg" alt="Logo treine.me" />
+          </a>
         </div>
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">Sobre</a></li>
           <li><a href="#">Treinar</a></li>
         </ul>
-      </header>
-    <div class="divider"></div>
+      </nav>
+      <div class="divider"></div>
       <main>
         <div class="text">
           <h1>Treinos <span>exclusivos</span> para você!</h1>
@@ -37,7 +39,7 @@
             <strong>tenha muito mais performance</strong> e qualidade de vida.
           </p>
           <div class="button">
-            <img src="assets/whatsapp-logo.svg" alt="" /> Comece já!
+            <img src="assets/whatsapp-logo.svg" alt="" /> Comece já
           </div>
         </div>
         <img src="assets/fitness-jump.png" alt="Pessoa se exercitando" />
